--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,42 @@
-django
-psycopg2
-Argon2
-requests
-pylint-django
-pytest
-pytest-cov
-django-debug-toolbar
+argon2==0.1.10
+astroid==2.2.5
+atomicwrites==1.3.0
+attrs==19.1.0
+certifi==2019.6.16
+chardet==3.0.4
+coverage==4.5.4
+dj-database-url==0.5.0
+Django==2.2.4
+django-debug-toolbar==2.0
+get==2019.4.13
+gunicorn==19.9.0
+idna==2.8
+importlib-metadata==0.19
+isort==4.3.21
+lazy-object-proxy==1.4.2
+mccabe==0.6.1
+more-itertools==7.2.0
+packaging==19.1
+pluggy==0.12.0
+post==2019.4.13
+psycopg2==2.8.3
+public==2019.4.13
+py==1.8.0
+pylint==2.3.1
+pylint-django==2.0.11
+pylint-plugin-utils==0.5
+pyparsing==2.4.2
+pytest==5.1.1
+pytest-cov==2.7.1
+pytz==2019.2
+query-string==2019.4.13
+request==2019.4.13
+requests==2.22.0
+six==1.12.0
+sqlparse==0.3.0
+typed-ast==1.4.0
+urllib3==1.25.3
+wcwidth==0.1.7
+whitenoise==4.1.4
+wrapt==1.11.2
+zipp==0.5.2
