--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ coverage==4.5.4
 dj-database-url==0.5.0
 Django==2.2.4
 django-debug-toolbar==2.0
+django-heroku==0.3.1
 get==2019.4.13
 gunicorn==19.9.0
 idna==2.8
