Change configuration env in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,10 @@ branch:
   only:
       - staging
 
-env: DJANGO_SETTINGS_MODULE="pur_beurre.settings.travis"
+env:
+  - DJANGO_SETTINGS_MODULE="pur_beurre.settings.travis"
+  - DJ_DEBUG=False
+  - DATABASE_URL=postgres://postgres@localhost/travisdb
 
 service:
    - postgresql
