--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,13 @@ branch:
   only:
       - staging
 
-env:
-  - DJANGO_SETTINGS_MODULE="pur_beurre.settings.travis"
-  - DJ_DEBUG=False
-  - DATABASE_URL=postgres://postgres@localhost/travisdb
+env: DJANGO_SETTINGS_MODULE="pur_beurre.settings.travis"
 
 service:
    - postgresql
+
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
 
 # command to run tests
 script:
