--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ env: DJANGO_SETTINGS_MODULE="pur_beurre.settings.travis"
 service:
    - postgresql
 
-before_script:
-  - psql -c 'create database travis_ci_test;' -U postgres
+addons:
+    postgresql: "9.4"
 
 # command to run tests
 script:
